syntax = "proto3";

option go_package = "genproto/coins_service";

package coins_service;
import "coin.proto";


service NFTService{
    rpc Create(CreateNFT) returns(NFT){}
    rpc GetById(NFTPrimaryKey) returns(NFT){}
    rpc Update(UpdateNFT) returns(NFT){}
    rpc GetAll(GetListNFTRequest) returns(GetListNFTResponse){}
    rpc Delete(NFTPrimaryKey) returns(Empty){}
}

message NFT{
    string id = 1;
    string nft_img = 2;
    string comment = 3;
    string user_id = 4;
    string status = 5;
    string telegram_id = 6;
    string created_at = 7;
    string updated_at = 8;
}

message CreateNFT{
    string nft_img = 1;
    string comment = 2;
    string user_id = 3;
    string telegram_id = 4;
}

message NFTPrimaryKey{
    string id = 1;
}

message UpdateNFT {
    string id = 1;
    string status = 2;
}

message GetListNFTRequest{
    int64 offset = 1;
    int64 limit = 2;
}

message GetListNFTResponse{
    int64 count = 1;
    repeated NFT nfts = 2;
}